--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-sigma/core": "^4.0.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "graphology": "^0.25.4",
+    "graphology-types": "^0.24.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sigma": "^3.0.0-beta.38",
+    "web-vitals": "^2.1.4",
+    "bootstrap": "^5.3.2"
+  },
+  "overrides": {
+    "postcss": "8.4.31",
+    "nth-check": "2.0.1"
+  },
+  "devDependencies": {
+    "graphology-generators": "^0.11.2",
+    "@faker-js/faker": "^8.4.1",
+    "seedrandom": "^3.0.5"
+
   },
   "scripts": {
     "start": "react-scripts start",
