--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-sigma/core": "^4.0.3",
+    "@react-sigma/layout-forceatlas2": "^4.0.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,9 @@
     "graphology-operators": "^1.6.0",
     "graphology-types": "^0.24.8",
     "react": "^18.3.1",
+    "react-animate-height": "^3.2.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "sigma": "^3.0.0-beta.38",
     "uuid": "^11.0.3",
