--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-sigma/core": "^4.0.3",
+    "@react-sigma/layout-core": "^4.0.3",
     "@sigma/node-image": "^3.0.0-beta.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
